--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is the backend part of the diary data saving web application",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
